src/app/globals.css
body {
  margin: 0;
  display: flex;
  height: 100vh;
  align-items: center;
  justify-content: center;
}
h2 {
  margin: 0;
}
.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border: 1px solid #000;
  border-radius: 20px;
  padding: 20px;
}
.label {
  margin-top: 20px;
  margin-bottom: 10px;
}

